# CMAPS

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.github/workflows/: deploy-pages.yml  test.yml
api/: Dockerfile  analysis.py  cache.py  data_loader.py  main.py  pyproject.toml  serializers.py  service.py  smoothing_config.py
api/scripts/: bench_analyze.py  update_bitcoin.py
api/tests/: test_analysis.py  test_smoothing_config.py
config/: pred_info.yaml
data/: Bitcoin_2010.csv
paper/: Makefile  README.md  main.tex  paper.tex  preamble.tex  references.bib
paper/scripts/: flatten.py  generate_figures.py
paper/sections/: abstract.tex  conclusion.tex  diagnostics.tex  illustration.tex  introduction.tex  method.tex
scripts/: dev-api.mjs  run-dev.mjs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: capture-errors.mjs  smoke-routes.mjs
web/src/: App.tsx  index.css  main.tsx  plotly.d.ts
web/src/api/: client.ts
web/src/components/: ContourSection.tsx  ControlPanel.tsx  CpCurveChart.tsx  CpFormula.tsx  CpHeatmap.tsx  KDistributionChart.tsx  KWiggleChart.tsx  MathBlock.tsx  MathInline.tsx  MethodologyContent.tsx  Navbar.tsx  OverviewNarrative.tsx  PriceContextChart.tsx  PriceMaChart.tsx  StrategyInspector.tsx  StrategyTable.tsx
web/src/context/: ThemeContext.tsx
web/src/hooks/: useAnalysis.ts  useLanding.ts  useLandingPreview.ts
web/src/lib/: chartTheme.ts  chartUtils.ts  colorscales.ts  lineChartShared.tsx  maRelation.ts  nivoLayers.tsx  (+3 more)
(+17 files in other folders)
