[project]
name = "cmaps-api"
version = "1.0.0"
description = "Conditional Moving-Average Probabilistic Similarity on Bitcoin — API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "analysis",
    "cache",
    "data_loader",
    "main",
    "serializers",
    "service",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
